# smart-vegetable

./: Cargo.toml
src/: cli.rs  cls.rs  main.rs  model.rs
